<resources>
    <string name="app_name">SEMZ CLOTHING PALLET</string>
    <string name="icon_add_title">Add</string>
    <string name="shopping_cart">CHECKOUT</string>
    <string name="donate">CONTACT US</string>
    <string name="events">CHECKOUT</string>
    <string name="sermons">ACCOUNT</string>
    <string name="book_shop">SHOP</string>
    <string name="home">HOME</string>
    <string name="about_us">ABOUT US</string>
    <string name="more_options">MORE</string>
    <string name="email">shop@asemzpallet.clothing</string>
    <string name="email2">shop@asemzpallet.clothing</string>
    <string name="search">Search</string>
    <string name="pop_over_menu">Pop over menu</string>
    <string name="about_app">About app</string>
    <string name="dialog_menu">About Semz Clothing</string>
</resources>